--- a/portpolio/src/main/resources/teplates/review/review.html
+++ b/portpolio/src/main/resources/teplates/review/review.html
@@ -6,90 +6,179 @@
 <meta charset="UTF-8">
 <title>REVIEW PAGE</title>
 <!-- Latest compiled and minified CSS -->
-<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
+<link
+	href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
+	rel="stylesheet">
 
 <!-- Latest compiled JavaScript -->
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
+<link rel="stylesheet"
+	href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.1/font/bootstrap-icons.css">
+<script
+	src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
 <style>
-	#btn-okay:hover{
-		background-color: rgb(109, 131, 80);
-	}
-	
-	#btn-cancel:hover{
-		color: white !important;
-		background-color: #889F69;
-	}
-	#social-oneclick{
-		width: 50px;
-		height: 50px;
-		border-radius: 50%;
-		margin: 0px 8px 0px 8px;
-	}
+.star-rating {
+	direction: rtl;
+	display: inline-block;
+	cursor: pointer;
+}
+
+.star-rating input {
+	display: none;
+}
+
+.star-rating label {
+	color: #ddd;
+	font-size: 18px;
+	padding: 0 1px;
+	cursor: pointer;
+	transition: all 0.2s ease;
+}
+
+.star-rating label:hover, .star-rating label:hover ~label, .star-rating input:checked
+	 ~label {
+	color: #ffc107;
+}
+
+.star-rating {
+	direction: rtl;
+	display: inline-block;
+	cursor: pointer;
+}
+
+.star-rating input {
+	display: none;
+}
+
+.star-rating label {
+	color: #ddd;
+	font-size: 18px;
+	padding: 0 1px;
+	cursor: pointer;
+	transition: all 0.2s ease;
+}
+
+.star-rating label:hover, .star-rating label:hover ~label, .star-rating input:checked
+	 ~label {
+	color: #ffc107;
+}
+
+#btn-okay:hover {
+	background-color: rgb(109, 131, 80);
+}
+
+#btn-cancel:hover {
+	color: white !important;
+	background-color: #889F69;
+}
+
+#social-oneclick {
+	width: 50px;
+	height: 50px;
+	border-radius: 50%;
+	margin: 0px 8px 0px 8px;
+}
 </style>
 </head>
 <body>
 	<div layout:fragment="content" class=" container card my-5   p-3">
 		<h3>리뷰 쓰기</h3>
-		<form th:action="@{/review/insert}" method="post" onsubmit="return form()">
-				<div class="my-5" >
-					<label for="keyword" class="form-label">책 제목</label>
-					<div class="d-flex justify-content-center" >
-						<input class="form-control me-2" th:field="*{title}" id="add_form_title" name="keyword" 
-							placeholder="책 제목을 입력해주세요."> 
-						<button type="button" onclick="openPopup()"  
-							class="btn" style="color: white; background-color: #889F69;">책검색</button>
-						<script th:src="@{/js/popup.js}"></script>
+		<form th:action="@{/review/insert}" method="post"
+			onsubmit="return form()">
+			<div class="my-5">
+				<label for="keyword" class="form-label">책 제목</label>
+				<div class="d-flex justify-content-center">
+					<input class="form-control me-2" th:field="*{title}"
+						id="add_form_title" name="keyword" placeholder="책 제목을 입력해주세요.">
+					<button type="button" onclick="openPopup()" class="btn"
+						style="color: white; padding: 8px 20px; background-color: #889F69;">책검색</button>
+					<script th:src="@{/js/popup.js}"></script>
+				</div>
+			</div>
+			<div class="my-5">
+				<h6>별점</h6>
+				<div class="rating_box">
+					<div class="col-md-6">
+						<div class="rating-card">
+							<div class="star-rating animated-stars">
+								<input type="radio" id="star5" name="rating" value="5">
+								<label for="star5" class="bi bi-star-fill"></label> <input
+									type="radio" id="star4" name="rating" value="4"> <label
+									for="star4" class="bi bi-star-fill"></label> <input
+									type="radio" id="star3" name="rating" value="3"> <label
+									for="star3" class="bi bi-star-fill"></label> <input
+									type="radio" id="star2" name="rating" value="2"> <label
+									for="star2" class="bi bi-star-fill"></label> <input
+									type="radio" id="star1" name="rating" value="1"> <label
+									for="star1" class="bi bi-star-fill"></label>
+							</div>
+						</div>
 					</div>
 				</div>
-				<div class="my-5">
-					<h6>별점</h4>
-					<div class="rating_box">
-		    			<div class="rating">★★★★★
-		      				<span class="rating_star">★★★★★</span>
-		      				<input type="range" value="1" step="1" min="0" max="10" >
-		    			</div>
-	  				</div>
-				</div>
-				<div class="my-5 row">
+			</div>
+			<div class="my-5 row">
 				<label for="review_tag" class="form-label">카테고리</label>
-					<div class="d-flex justify-content-center">
-						<input type="text" class="form-control me-2" id="review_tag" name="review_tag">
-						<button class="btn" style="color: white; background-color: #889F69;">태그 추가</button>
-					</div>
+				<div class="d-flex justify-content-center">
+					<input type="text" class="form-control me-2" id="review_tag"
+						name="review_tag">
+					<button type="button" class="btn" onclick="openPopup2()"
+						style="padding: 8px 20px; color: white; background-color: #889F69;">태그 추가</button>
+					<script th:src="@{/js/popup2.js}"></script>
 				</div>
-				<div class="my-5">
-				<label for="review_title" class="form-label">리뷰 제목</label>
-				<input class="form-control" type="text" id="review_title" name="review_title">
-				</div>
-				
-				<div class="my-5">
-					<label class="form-label" for="review_content">내용</label>
-					<textarea class="form-control" id="review_content" name="review_content" cols="60" rows="10"></textarea>
-				</div>
-				<div class="my-3 text-end">
-					<input type="submit" class="btn" value="완성" style="color: white; background-color: #889F69;">
-					<input type="reset" class="btn" value="취소" style="color: white; background-color: #889F69;">
-					<a th:href="@{/review/list}" class="btn" style="color: #889F69; border-color: #889F69;">목록</a>
-				</div>
-			</form>
-			<script>
+			</div>
+			<div class="my-5">
+				<label for="review_title" class="form-label">리뷰 제목</label> <input
+					class="form-control" type="text" id="review_title"
+					name="review_title">
+			</div>
+
+			<div class="my-5">
+				<label class="form-label" for="review_content">내용</label>
+				<textarea class="form-control" id="review_content"
+					name="review_content" cols="60" rows="10"></textarea>
+			</div>
+			<div class="my-3 text-end">
+				<input type="submit" class="btn" value="완성"
+					style="padding: 8px 20px; color: white; background-color: #889F69;">
+				<input type="reset" class="btn" value="취소"
+					style="padding: 8px 20px; color: white; background-color: #889F69;">
+				<a th:href=" javascript:history.go(-1)" class="btn"
+					style="padding: 8px 20px; color: #889F69; border-color: #889F69;">이전</a>
+			</div>
+		</form>
+		<script>
+			document.querySelectorAll('.star-rating:not(.readonly) label').forEach(star => {
+				star.addEventListener('click', function() {
+						this.style.transform = 'scale(1.2)';
+						setTimeout(() => {
+								this.style.transform = 'scale(1)';
+						}, 200);
+				});
+			});
+			// 페이지 로드 시 바로 적용
+			setInitialRating();
 			function openPopup() {
-			    var popup = window.open("/book-search", "도서 검색", "width=600, height=600");
-			    popup.focus();
+				var popup = window.open("/book-search", "도서 검색",
+						"width=600, height=600");
+				popup.focus();
 			}
-			
+			function openPopup2(){
+				var popup2 = window.open("/tag-search", "카테고리 선택",
+						"width=600, height=600");
+				popup2.focus();
+			}
+
 			function form() {
-				let book_title=document.getElementById("add_form_title");
-				let review_tag=document.getElementById("review_tag");
-				let review_title=document.getElementById("review_title");
-				let review_content=document.getElementById("review_content");
-				
+				let book_title = document.getElementById("add_form_title");
+				let review_tag = document.getElementById("review_tag");
+				let review_title = document.getElementById("review_title");
+				let review_content = document.getElementById("review_content");
+
 				if (add_form_title.value == "") {
 					alert("책 제목을 입력해주세요.");
 					book_title.focus();
 					return false;
 				}
-				if (review_tag.value=="") {
+				if (review_tag.value == "") {
 					alert("카테고리를 추가해주세요.");
 					review_tag.focus();
 					return false;
@@ -105,7 +194,7 @@
 					return false;
 				}
 			}
-			</script>	
+		</script>
 	</div>
 </body>
 </html>
