--- a/portpolio/src/main/resources/teplates/review/bookSearch.html
+++ b/portpolio/src/main/resources/teplates/review/bookSearch.html
@@ -18,10 +18,10 @@ th, td {
 	<script th:src="@{/js/search.js}"></script>
 	<div class="col-md-12">
 		<h1>도서 검색</h1>
-		<div class="col-md-4">
+		<form class="col-md-4">
 			<input type="text" name="search" id="search" class="form-control"
 				placeholder="도서명을 입력해주세요.">
-		</div>
+		</form>
 
 		<hr>
 		<table class="table">
